# unit-converter

./: .gitignore  CMakeLists.txt
include/: JsonHandler.h  Temperature.h  Time.h
src/: JsonHandler.cpp  Temperature.cpp  Time.cpp  main.cpp
